--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,38 +1,42 @@
-# Android CircleCI configuration file
+# Java Gradle CircleCI 2.0 configuration file
+#
+# Check https://circleci.com/docs/2.0/language-java/ for more details
+#
 version: 2
 jobs:
   build:
-    working_directory: ~/code
     docker:
-      - image: circleci/android:api-27-alpha
+      # specify the version you desire here
+      - image: circleci/openjdk:8-jdk
+
+      # Specify service dependencies here if necessary
+      # CircleCI maintains a library of pre-built images
+      # documented at https://circleci.com/docs/2.0/circleci-images/
+      # - image: circleci/postgres:9.4
+
+    working_directory: ~/repo
+
     environment:
+      # Customize the JVM maximum heap limit
       JVM_OPTS: -Xmx3200m
+      TERM: dumb
+
     steps:
       - checkout
+
+      # Download and cache dependencies
       - restore_cache:
-          key: jars-{{ checksum "build.gradle" }}-{{ checksum  "app/build.gradle" }}-{{ checksum "framework/build.gradle" }}
-      - run:
-          name: Download Dependencies
-          command: ./gradlew androidDependencies
+          keys:
+            - v1-dependencies-{{ checksum "build.gradle" }}
+            # fallback to using the latest cache if no exact match is found
+            - v1-dependencies-
+
+      - run: gradle dependencies
+
       - save_cache:
           paths:
             - ~/.gradle
-          key: jars-{{ checksum "build.gradle" }}-{{ checksum  "app/build.gradle" }}-{{ checksum "framework/build.gradle" }}
-      - run:
-          name: Assemble Debug Build
-          command: ./gradlew assembleDevDebug --info
-      - store_artifacts:
-          path: app/build/outputs/apk/dev/debug/app-dev-debug.apk
-          destination: apks/los-dev-debug.apk
-      - run:
-          name: Run Unit Tests
-          command: ./gradlew testDevDebugUnitTest jacocoTestDevDebugUnitTestReport
-      - store_artifacts:
-          path: app/build/reports
-          destination: reports
-      - store_test_results:
-          path: app/build/test-results
-          destination: test-results
-      - run:
-          name: Uploading Test Results To Codecov
-          command: bash <(curl -s https://codecov.io/bash) -t 3f755b80-cb56-4c19-8573-122f76c23279
+          key: v1-dependencies-{{ checksum "build.gradle" }}
+
+      # run tests!
+      - run: gradle test
